Closed Bug 131089 Opened 24 years ago Closed 24 years ago

crashes [@ nsEventStateManager::ResetBrowseWithCaret]

Categories

(Core :: XUL, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla1.0

People

(Reporter: dbaron, Assigned: aaronlev)

Details

(Keywords: crash, topcrash, topembed+, Whiteboard: seeking r=, sr=, a=)

Crash Data

Attachments

(1 file)

A topcrash with the stack below started appearing in 2002-03-10-11 builds. I assume it was caused by the checkin: date: 2002/03/10 06:21:38; author: aaronl%netscape.com; state: Exp; lines: +471 -215 Fixes bug 66597, bug 103284, bug 114440, bug 120023, bug 128741, bug 19259. Cleans up browse with caret, makes it work with XML content docs, creates keyboard toggle for it (Accel+shift+K), synchronizes focus and document selection so that users can tab navigate relative to their last find or click in text, or vice versa, makes tabbing move relative to named anchor that has been jumped to. r=bryner, sr=alecf, a=asa It's showing up on Linux and Windows Top of a stack shown by talkback (for 2002031305 build, I think): nsEventStateManager::ResetBrowseWithCaret [d:\builds\seamonkey\mozilla\content\events\src\nsEventStateManager.cpp line 4521] nsEventStateManager::PreHandleEvent [d:\builds\seamonkey\mozilla\content\events\src\nsEventStateManager.cpp line 508] PresShell::HandleEventInternal [d:\builds\seamonkey\mozilla\layout\html\base\src\nsPresShell.cpp line 6051] PresShell::HandleEvent [d:\builds\seamonkey\mozilla\layout\html\base\src\nsPresShell.cpp line 5979] nsViewManager::HandleEvent [d:\builds\seamonkey\mozilla\view\src\nsViewManager.cpp line 2043] nsView::HandleEvent [d:\builds\seamonkey\mozilla\view\src\nsView.cpp line 306] nsViewManager::DispatchEvent [d:\builds\seamonkey\mozilla\view\src\nsViewManager.cpp line 1863] HandleEvent [d:\builds\seamonkey\mozilla\view\src\nsView.cpp line 83] nsWindow::DispatchEvent [d:\builds\seamonkey\mozilla\widget\src\windows\nsWindow.cpp line 869] nsWindow::DispatchWindowEvent [d:\builds\seamonkey\mozilla\widget\src\windows\nsWindow.cpp line 886] nsWindow::DispatchFocus [d:\builds\seamonkey\mozilla\widget\src\windows\nsWindow.cpp line 4903] nsWindow::ProcessMessage [d:\builds\seamonkey\mozilla\widget\src\windows\nsWindow.cpp line 3734] nsWindow::WindowProc [d:\builds\seamonkey\mozilla\widget\src\windows\nsWindow.cpp line 1131] User comments: (4020407) Comments: I tried to go back several pages. (4019004) URL: http://seattlediy.tripod.com/ (4019004) Comments: rejecting cookies (4014981) Comments: leaving an encrypted page... clicked on the OK button in the dialog (4010712) Comments: Go to employee channel URL page. (4004119) Comments: Attempt to access Schwab account (3913325) URL: http://www.foxes.com (3913325) Comments: Crash when logging in to members section (3913238) URL: http://www.foxes.com
My guess is that you need to null-check the result of mPresContext->GetContainer. It will be null during teardown (after the document viewer has been destroyed). It seems to be null-checked in most other cases.
Severity: normal → critical
Status: NEW → ASSIGNED
Priority: -- → P1
Target Milestone: --- → mozilla1.0
The return code fix is something I just noticed, and I would like to check in with this fix. Nothing checks the return code, but it shouldn't be returning a failure code when it succeed.
Keywords: nsbeta1
Whiteboard: seeking r=, sr=, a=
Keywords: nsbeta1nsbeta1+, topembed+
Comment on attachment 74477 [details] [diff] [review] Adds null check, and fixes return code r=bryner
Attachment #74477 - Flags: review+
Comment on attachment 74477 [details] [diff] [review] Adds null check, and fixes return code sr=alecf
Attachment #74477 - Flags: superreview+
Comment on attachment 74477 [details] [diff] [review] Adds null check, and fixes return code a=scc
Attachment #74477 - Flags: approval+
checked in
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Marking verified. This crash is long gone...I see a couple of crashes with N700 and 1 with N701 (but considering the amount of users for those releases, those 3 crashes aren't really an issue).
Status: RESOLVED → VERIFIED
Crash Signature: [@ nsEventStateManager::ResetBrowseWithCaret]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: