Bug 131089, bug 131238, and bug 131918. Fixes regressions caused from 'browse with caret' checkins in bug 66597. a) bug 131089 - crash in ResetBrowseWithCaret(), r=bryner, sr=alecf, a=scc. b) bug 131238 - assertions caused by SetCaretContentVisible, r=bryner, sr=alecf, a=scc. c) bug 131918 - infinite loop in MoveFocusToCaret(), r=jgaunt, sr=alecf, a=asa